--- a/pages/legal.html
+++ b/pages/legal.html
@@ -2,14 +2,14 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' https://unpkg.com https://cdnjs.cloudflare.com https://cdn.jsdelivr.net; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com https://cdn.jsdelivr.net https://cdnjs.cloudflare.com; font-src 'self' https://fonts.gstatic.com https://cdnjs.cloudflare.com https://cdn.jsdelivr.net; img-src 'self' data: https:; connect-src 'self' https://unpkg.com;">
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' https://cdnjs.cloudflare.com https://cdn.jsdelivr.net; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com https://cdn.jsdelivr.net https://cdnjs.cloudflare.com; font-src 'self' https://fonts.gstatic.com https://cdnjs.cloudflare.com https://cdn.jsdelivr.net; img-src 'self' data: https:; connect-src 'self';">
     <meta http-equiv="X-Content-Type-Options" content="nosniff">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Aviso Legal - Rafael Pérez Llorca</title>
     <link rel="icon" type="image/png" href="../assets/images/favicon.png" />
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&family=Roboto+Mono:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../css/styles.css">
-    <script src="https://unpkg.com/feather-icons@4.29.1/dist/feather.min.js" integrity="sha384-En/3vVo7Wc+6Ogkkp7OUi5Oc7Zf4c+N/kRP3z7QVcJssy5Ud5MWcAvwWDAEFMga8" crossorigin="anonymous"></script>
+
 </head>
 <body>
     <header id="main-header"></header>
@@ -22,10 +22,7 @@
             <ul class="legal-list-none">
                 <li><strong data-i18n="legalPage.section1.owner">Titular:</strong> Rafael Pérez Llorca</li>
                 <li><strong data-i18n="legalPage.section1.address">Domicilio:</strong> Madrid, España</li>
-                <li><strong data-i18n="legalPage.section1.email">Email de contacto:</strong> <span id="contact-email">[protegido]</span></li>
-                <script>
-                    document.getElementById('contact-email').innerText = 'contacto' + '@' + 'rafaelperezllorca.com';
-                </script>
+                <li><strong data-i18n="legalPage.section1.email">Email de contacto:</strong> <span id="contact-email" class="email-deobfuscate" data-u="contacto" data-d="rafaelperezllorca.com">[protegido]</span></li>
                 <li><strong data-i18n="legalPage.section1.activity">Actividad:</strong> <span data-i18n="legalPage.section1.activityValue">Servicios de Ingeniería, Consultoría de Ciberseguridad y Formación.</span></li>
             </ul>
         </div>
