--- a/pages/privacy.html
+++ b/pages/privacy.html
@@ -2,14 +2,14 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' https://unpkg.com https://cdnjs.cloudflare.com https://cdn.jsdelivr.net; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com https://cdn.jsdelivr.net https://cdnjs.cloudflare.com; font-src 'self' https://fonts.gstatic.com https://cdnjs.cloudflare.com https://cdn.jsdelivr.net; img-src 'self' data: https:; connect-src 'self' https://unpkg.com;">
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' https://cdnjs.cloudflare.com https://cdn.jsdelivr.net; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com https://cdn.jsdelivr.net https://cdnjs.cloudflare.com; font-src 'self' https://fonts.gstatic.com https://cdnjs.cloudflare.com https://cdn.jsdelivr.net; img-src 'self' data: https:; connect-src 'self';">
     <meta http-equiv="X-Content-Type-Options" content="nosniff">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Política de Privacidad - Rafael Pérez Llorca</title>
     <link rel="icon" type="image/png" href="../assets/images/favicon.png" />
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&family=Roboto+Mono:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../css/styles.css">
-    <script src="https://unpkg.com/feather-icons@4.29.1/dist/feather.min.js" integrity="sha384-En/3vVo7Wc+6Ogkkp7OUi5Oc7Zf4c+N/kRP3z7QVcJssy5Ud5MWcAvwWDAEFMga8" crossorigin="anonymous"></script>
+
 </head>
 <body>
     <header id="main-header"></header>
@@ -18,7 +18,7 @@
         
         <div class="legal-section">
             <h2 class="legal-section-title" data-i18n="privacyPage.section1.title">1. RESPONSABLE DEL TRATAMIENTO</h2>
-            <p data-i18n="privacyPage.section1.text">Los datos personales recogidos a través de este sitio web serán tratados por Rafael Pérez Llorca, con domicilio en Madrid, España. Contacto: leafar@gmail.com.</p>
+            <p data-i18n="privacyPage.section1.text">Los datos personales recogidos a través de este sitio web serán tratados por Rafael Pérez Llorca, con domicilio en Madrid, España. Contacto: <span class="email-deobfuscate" data-u="contacto" data-d="rafaelperezllorca.com">[protegido]</span>.</p>
         </div>
 
         <div class="legal-section">
@@ -43,7 +43,7 @@
 
         <div class="legal-section">
             <h2 class="legal-section-title" data-i18n="privacyPage.section5.title">5. SUS DERECHOS</h2>
-            <p data-i18n="privacyPage.section5.text">Usted tiene derecho a acceder, rectificar y suprimir sus datos, así como a limitar su tratamiento, enviando un correo electrónico a leafar@gmail.com.</p>
+            <p data-i18n="privacyPage.section5.text">Usted tiene derecho a acceder, rectificar y suprimir sus datos, así como a limitar su tratamiento, enviando un correo electrónico a <span class="email-deobfuscate" data-u="contacto" data-d="rafaelperezllorca.com">[protegido]</span>.</p>
         </div>
     </main>
     <footer id="main-footer"></footer>
